// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs/Button Color smoke-test 1`] = `
<button class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-mui-classname"
        tabindex="0"
        type="button"
        data-cy="button"
>
  Button
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</button>
`;

exports[`Inputs/Button Disabled smoke-test 1`] = `
<button class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-mui-classname"
        tabindex="-1"
        type="button"
        disabled
        data-cy="button"
>
  Button
</button>
`;

exports[`Inputs/Button Elevated smoke-test 1`] = `
<button class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-mui-classname"
        tabindex="0"
        type="button"
        data-cy="button"
>
  Button
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</button>
`;

exports[`Inputs/Button Icon smoke-test 1`] = `
<button class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-mui-classname"
        tabindex="0"
        type="button"
        data-cy="button"
>
  <span class="MuiButton-startIcon MuiButton-iconSizeMedium css-mui-classname">
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="SendIcon"
         data-cy="button-icon"
    >
      <path d="M2.01 21 23 12 2.01 3 2 10l15 2-15 2z">
      </path>
    </svg>
  </span>
  Button
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</button>
`;

exports[`Inputs/Button IconCustom smoke-test 1`] = `
<button class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-mui-classname"
        tabindex="0"
        type="button"
        data-cy="button"
>
  <span class="MuiButton-startIcon MuiButton-iconSizeMedium css-mui-classname">
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="StyleIcon"
         data-cy="button-icon"
         style="height: 24px; width: 24px;"
    >
      <path d="m2.53 19.65 1.34.56v-9.03l-2.43 5.86c-.41 1.02.08 2.19 1.09 2.61m19.5-3.7L17.07 3.98c-.31-.75-1.04-1.21-1.81-1.23-.26 0-.53.04-.79.15L7.1 5.95c-.75.31-1.21 1.03-1.23 1.8-.01.27.04.54.15.8l4.96 11.97c.31.76 1.05 1.22 1.83 1.23.26 0 .52-.05.77-.15l7.36-3.05c1.02-.42 1.51-1.59 1.09-2.6M7.88 8.75c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1m-2 11c0 1.1.9 2 2 2h1.45l-3.45-8.34z">
      </path>
    </svg>
  </span>
  Button
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</button>
`;

exports[`Inputs/Button IconRight smoke-test 1`] = `
<button class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-mui-classname"
        tabindex="0"
        type="button"
        data-cy="button"
>
  Button
  <span class="MuiButton-endIcon MuiButton-iconSizeMedium css-mui-classname">
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="SendIcon"
         data-cy="button-icon"
    >
      <path d="M2.01 21 23 12 2.01 3 2 10l15 2-15 2z">
      </path>
    </svg>
  </span>
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</button>
`;

exports[`Inputs/Button IconRotate smoke-test 1`] = `
<button class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-mui-classname"
        tabindex="-1"
        type="button"
        disabled
        data-cy="button"
>
  <span class="MuiButton-startIcon MuiButton-iconSizeMedium css-mui-classname">
    <div class="MuiBox-root css-mui-classname">
      <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
           focusable="false"
           aria-hidden="true"
           viewbox="0 0 24 24"
           data-testid="RefreshIcon"
           data-cy="button-icon"
      >
        <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z">
        </path>
      </svg>
    </div>
  </span>
  Loading
</button>
`;

exports[`Inputs/Button Localized smoke-test 1`] = `
<button class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-mui-classname"
        tabindex="0"
        type="button"
        data-cy="locale.button"
>
  Bottone
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</button>
`;

exports[`Inputs/Button Primary play-test 1`] = `
<button class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-mui-classname"
        tabindex="0"
        type="button"
        data-cy="button"
>
  Button
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</button>
`;

exports[`Inputs/Button Styled smoke-test 1`] = `
<button class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-mui-classname"
        tabindex="0"
        type="button"
        data-cy="button"
        style="background-color: red; color: white;"
>
  Button
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</button>
`;

exports[`Inputs/Button VariantOutlined smoke-test 1`] = `
<button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation css-mui-classname"
        tabindex="0"
        type="button"
        data-cy="button"
>
  Button
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</button>
`;
